<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppAndroidCouchDB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>My DashBoard</item>
        <item>My Devices</item>
        <item>My Profile</item>
        <item>Settings</item>
        <item>Test Samples</item>
        <item>Logout</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_my_dashboard</item>
        <item>@drawable/ic_my_devices</item>
        <item>@drawable/ic_my_profile</item>
        <item>@drawable/ic_settings</item>
        <item>@android:drawable/ic_menu_share</item>
        <item>@drawable/ic_logout</item>
    </array>

    <string-array name="notifications_drawer_items">
        <item>CHECK-IN</item>
        <item>CHECK-OUT</item>
        <item>LOW TEMPERATURE</item>
        <item>REGULAR TEMPERATURE</item>
        <item>HIGH TEMPERATURE</item>
        <item>GOOD BATTERY</item>
        <item>LOW BATTERY</item>
        <item>CRITICAL BATTERY</item>
    </string-array>

    <array name="notifications_drawer_icons">
        <item>@drawable/check_in</item>
        <item>@drawable/check_out</item>
        <item>@drawable/temp_blue</item>
        <item>@drawable/temp_green</item>
        <item>@drawable/temp_red</item>
        <item>@drawable/bat_range</item>
        <item>@drawable/bat_low</item>
        <item>@drawable/bat_critical</item>
    </array>

    <!-- strings My DashBoard -->
    <string name="str_title_my_dashboard">My DashBoard</string>
    <string name="title_activity_fragment_my_dashboard">My Dashboard</string>
    <string name="str_title_panic_button_Notifications">Panic Button Notifications</string>
    <string name="str_title_GPS_Notifications">GPS Notifications</string>
    <string name="str_title_temperature_Notifications">Temperature Notifications</string>
    <string name="str_do_not_have_devices_on_dashboard">Do not have devices to add go to "My Devices" in menu</string>

    <!-- strings My Devices -->
    <string name="title_activity_fragment_my_devices">My Devices</string>
    <string name="title_activity_add_device">Add Device</string>
    <string name="str_menu_item_add_device">Add Device</string>
    <string name="str_do_not_have_devices">Do not have devices to add press "Add Device"</string>

    <string name="str_delete_device">Are you sure you want to permanently delete the Device?</string>

    <!-- strings Add Device -->
    <string name="prompt_name_device">Name device</string>
    <string name="prompt_mac_address_device">MAC Address of Device</string>
    <string name="str_button_save_device">Save Device</string>
    <string name="str_successful_device_inserted">The device was successfully inserted</string>
    <string name="str_error_device_already_yours">You already have this device in your list devices</string>

    <!-- strings Detail Device -->
    <string name="monitoring_device">Monitoring Device</string>

    <!-- strings fragment_temperature -->
    <string name="str_title_temperature">Temperature Settings</string>
    <string name="prompt_min_temperature">Minimum temperature</string>
    <string name="prompt_max_temperature">Maximum temperature</string>

    <!-- strings fragment_safezone_notifications -->
    <string name="str_title_safezone">Safezone Settings</string>

    <!-- strings My Profile -->
    <string name="str_title_my_profile">My Profile</string>
    <string name="str_title_logout">Logout</string>
    <string name="title_activity_fragment_my_profile">My Profile</string>
    <string name="title_activity_config_sensor">Configuration Sensor</string>
    <string name="title_activity_sensors">Sensors</string>

    <!-- strings List Safezone Activity -->
    <string name="title_activity_list_safezones">ListSafezones</string>
    <string name="str_addSafezone">Add Safezone</string>

    <!-- strings Safezone Activity -->
    <string name="title_activity_safezone">Safezone</string>
    <string name="str_button_editRadius">Edit Radius</string>
    <string name="str_button_editNameSafezone">Edit Name</string>
    <string name="str_button_editNotification">Edit Notification</string>
    <string name="str_button_editSafezone">Edit Location</string>
    <string name="str_button_deleteSafezone">Delete Safezone</string>

    <!-- strings edit Safezone Activity -->
    <string name="title_activity_activity_edit_name_safezone">ActivityEditNameSafezone</string>
    <string name="str_editNameOfSafezone">Name Of Safezone:</string>
    <string name="str_editNotificationOfSafezone">Notification of Safezone</string>
    <string name="str_button_update">Update</string>
    <string name="str_button_save">Save</string>

    <!-- strings edit Safezone EDIT MAP Activity -->
    <string name="title_activity_activity_safezone_edit_map">ActivitySafezoneEditMap</string>
    <string name="str_search_adress">Search Address</string>
    <string name="str_radius">Radius:</string>
    <!-- strings Activity Monitor Sensor Detail -->
    <string name="title_activity_monitor_sensor_panic_button">Monitor Sensor Details</string>
    <string name="str_button_calcDirection">Go to this Direction</string>

    <!-- strings Temperature Activity -->
    <string name="title_activity_activity_temperature">Settings Temperature</string>
    <string name="str_temperature_minimum">Minimum Temperature Notification</string>
    <string name="str_temperature_maximum">Maximum Temperature Notification</string>

    <!-- strings Battery Activity -->
    <string name="title_activity_activity_battery">Settings Battery</string>
    <string name="str_battery_low">Low Battery Level Notification</string>
    <string name="str_battery_critical">Critical Battery Level Notification</string>

    <string name="title_activity_monitor_sensor_safezones">List of GPS</string>
    <string name="title_activity_activity_monitor_sensor_pbtemp_batt">ActivityMonitorSensorPBTempBatt</string>


    <!-- String error to application -->
    <string name="str_title_information_dialog">Information</string>
    <string name="str_title_delete_dialog">Delete</string>
    <string name="str_error_exit_application">Are you sure you want to exit the application?</string>
    <string name="str_error_internet_connection">Please check your internet connection or try again later.</string>
    <string name="str_error_while_processing">An error occurred while processing your request. Please try again later.</string>
    <string name="str_error_battery_range">The battery range have an error, please set a valid range.</string>
    <string name="str_error_temperature_range">The temperature range have an error, please set a valid range.</string>
    <string name="str_error_insert_new_device">Some Error, when trying to insert new device, please try again later</string>
    <string name="str_error_device_not_found">Device not found!</string>


    <!-- strings fragment_settings -->
    <string name="title_activity_fragment_settings">Settings</string>
    <string name="title_edittext_preference">Edit text preference</string>
    <string name="summary_edittext_preference">An example that uses an edit text dialog</string>
    <string name="dialog_title_edittext_preference">Enter your favorite animal</string>
    <string name="title_checkbox_preference">Checkbox preference</string>
    <string name="summary_checkbox_preference">This is a checkbox</string>
    <string name="inline_preferences">In-line preferences</string>
    <string name="dialog_based_preferences">Dialog-based preferences</string>
    <string name="launch_preferences">Launch preferences</string>
    <string name="preference_attributes">Preference attributes</string>
    <string name="title_list_preference">List preference</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="title_screen_preference">Screen preference</string>
    <string name="summary_screen_preference">Shows another screen of preferences</string>
    <string name="title_fragment_preference">Fragment preference</string>
    <string name="summary_fragment_preference">Shows another fragment of preferences</string>
    <string name="title_next_screen_toggle_preference">Toggle preference</string>
    <string name="summary_next_screen_toggle_preference">Preference that is on the next screen but same hierarchy</string>
    <string name="title_intent_preference">Intent preference</string>
    <string name="summary_intent_preference">Launches an Activity from an Intent</string>
    <string name="title_my_preference">My preference</string>
    <string name="summary_my_preference">This is a custom counter preference</string>
    <string name="title_advanced_toggle_preference">Haunted preference</string>
    <string name="summary_on_advanced_toggle_preference">I\'m on! :)</string>
    <string name="summary_off_advanced_toggle_preference">I\'m off! :(</string>
    <string name="title_parent_preference">Parent checkbox preference</string>
    <string name="summary_parent_preference">This is visually a parent</string>
    <string name="title_child_preference">Child checkbox preference</string>
    <string name="summary_child_preference">This is visually a child</string>

    <string-array name="entries_list_preference">
        <item>Alpha Option 01</item>
        <item>Beta Option 02</item>
        <item>Charlie Option 03</item>
    </string-array>
    <string-array name="entryvalues_list_preference">
        <item>Alpha</item>
        <item>Beta</item>
        <item>Charlie</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="tab_words">Words</string>
    <string name="tab_numbers">Numbers</string>

</resources>
